Fixed our clients section side spacing

--- a/src/assets/less/local.less
+++ b/src/assets/less/local.less
@@ -806,18 +806,14 @@ img {
             order: none;
 
             .cs-image-group {
-                margin: none;
-                margin-top: 0px;
-                margin-left: 10px;
+                margin: 0 0 0 10px;
                 flex-direction: column;
             }
         }
 
         .cs-flex-reverse {
             .cs-image-group {
-                margin: none;
-                margin-top: 0px;
-                margin-right: 10px;
+                margin: 0 10px 0 0;
                 flex-direction: column;
             }
         }
